--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -2,8 +2,8 @@ name: buildx
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 21 * * 5"
+  # schedule:
+  #   - cron: "0 21 * * 5"
   push:
     branches:
       - 'master'
