--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ annotated-types==0.6.0
     # via
     #   flexget
     #   pydantic
+anyio==4.3.0
+    # via httpx
 apscheduler==3.10.4
     # via flexget
 attrs==23.2.0
@@ -40,10 +42,9 @@ brotli==1.1.0
 certifi==2023.11.17
     # via
     #   flexget
-    #   python-telegram-bot
+    #   httpcore
+    #   httpx
     #   requests
-cffi==1.16.0
-    # via cryptography
 charset-normalizer==3.3.2
     # via
     #   flexget
@@ -62,11 +63,7 @@ cloudscraper==1.2.71
     # via -r requirements.in
 colorama==0.4.6
     # via flexget
-cryptography==42.0.2
-    # via python-telegram-bot
-decorator==5.1.1
-    # via python-telegram-bot
-deluge-client==1.9.0
+deluge-client==1.10.2
     # via -r requirements.in
 feedparser==6.0.11
     # via flexget
@@ -95,11 +92,19 @@ greenlet==3.0.3
     #   sqlalchemy
 guessit==3.8.0
     # via flexget
+h11==0.14.0
+    # via httpcore
 html5lib==1.1
     # via flexget
+httpcore==1.0.4
+    # via httpx
+httpx==0.27.0
+    # via python-telegram-bot
 idna==3.6
     # via
+    #   anyio
     #   flexget
+    #   httpx
     #   requests
 importlib-resources==6.1.1
     # via
@@ -181,8 +186,6 @@ portend==3.2.0
     #   flexget
 psutil==5.9.7
     # via flexget
-pycparser==2.21
-    # via cffi
 pydantic==2.5.3
     # via
     #   flexget
@@ -211,7 +214,7 @@ python-dateutil==2.8.2
     #   guessit
     #   pendulum
     #   time-machine
-python-telegram-bot==12.8
+python-telegram-bot==21.0.1
     # via -r requirements.in
 pytz==2023.3.post1
     # via
@@ -260,6 +263,10 @@ six==1.16.0
     #   html5lib
     #   irc-bot
     #   python-dateutil
+sniffio==1.3.1
+    # via
+    #   anyio
+    #   httpx
 soupsieve==2.5
     # via
     #   beautifulsoup4
@@ -270,10 +277,8 @@ tempora==5.5.0
     # via
     #   flexget
     #   portend
-time-machine==2.13.0
+time-machine==2.14.0
     # via pendulum
-tornado==6.4
-    # via python-telegram-bot
 transmission-rpc==7.0.3
     # via -r requirements.in
 typing-extensions==4.9.0
