--- a/.github/workflows/buildx-on-pr.yml
+++ b/.github/workflows/buildx-on-pr.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Compile requirements.txt
         run: |
-          docker run --rm -i -v ${PWD}:/req alpine:${{ env.ALPINE_VER }} \
+          docker run --rm -i -v ${PWD}:/req alpine:3.19.1 \
             sh -c "apk add py3-pip build-base python3-dev libffi-dev && rm /usr/lib/python*/EXTERNALLY-MANAGED && pip install pip-tools && cd /req && pip-compile -U"
 
       - name: Set up QEMU
