--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ aniso8601==9.0.1
     # via
     #   flask-restx
     #   flexget
-anyio==4.4.0
+anyio==4.6.2.post1
     # via httpx
 apscheduler==3.10.4
     # via flexget
@@ -41,7 +41,7 @@ certifi==2024.8.30
     #   httpcore
     #   httpx
     #   requests
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via
     #   flexget
     #   requests
@@ -78,11 +78,11 @@ flask-login==0.6.3
     # via flexget
 flask-restx==1.3.0
     # via flexget
-flexget==3.11.46
+flexget==3.11.57
     # via -r requirements.in
 future==0.18.3
     # via irc-bot
-greenlet==3.0.3
+greenlet==3.1.1
     # via
     #   flexget
     #   sqlalchemy
@@ -92,11 +92,11 @@ h11==0.14.0
     # via httpcore
 html5lib==1.1
     # via flexget
-httpcore==1.0.5
+httpcore==1.0.7
     # via httpx
 httpx==0.27.2
     # via python-telegram-bot
-idna==3.8
+idna==3.10
     # via
     #   anyio
     #   flexget
@@ -120,7 +120,7 @@ jaraco-context==6.0.1
     # via
     #   flexget
     #   jaraco-text
-jaraco-functools==4.0.2
+jaraco-functools==4.1.0
     # via
     #   cheroot
     #   flexget
@@ -168,7 +168,7 @@ packaging==24.1
     # via flexget
 pendulum==3.0.0
     # via flexget
-plumbum==1.8.3
+plumbum==1.9.0
     # via
     #   flexget
     #   rpyc
@@ -176,7 +176,7 @@ portend==3.2.0
     # via
     #   cherrypy
     #   flexget
-psutil==6.0.0
+psutil==6.1.0
     # via flexget
 pygments==2.18.0
     # via
@@ -201,7 +201,7 @@ python-dateutil==2.9.0.post0
     #   time-machine
 python-telegram-bot==21.3
     # via -r requirements.in
-pytz==2024.1
+pytz==2024.2
     # via
     #   apscheduler
     #   flask-restx
@@ -227,14 +227,14 @@ requests==2.32.3
     #   transmission-rpc
 requests-toolbelt==1.0.0
     # via cloudscraper
-rich==13.8.0
+rich==13.9.3
     # via flexget
 rpds-py==0.20.0
     # via
     #   flexget
     #   jsonschema
     #   referencing
-rpyc==6.0.0
+rpyc==6.0.1
     # via flexget
 sgmllib3k==1.0.0
     # via
@@ -255,13 +255,13 @@ soupsieve==2.6
     # via
     #   beautifulsoup4
     #   flexget
-sqlalchemy==2.0.34
+sqlalchemy==2.0.36
     # via flexget
 tempora==5.7.0
     # via
     #   flexget
     #   portend
-time-machine==2.15.0
+time-machine==2.16.0
     # via pendulum
 transmission-rpc==7.0.11
     # via -r requirements.in
@@ -270,7 +270,7 @@ typing-extensions==4.12.2
     #   flexget
     #   sqlalchemy
     #   transmission-rpc
-tzdata==2024.1
+tzdata==2024.2
     # via
     #   flexget
     #   pendulum
@@ -286,7 +286,7 @@ webencodings==0.5.1
     # via
     #   flexget
     #   html5lib
-werkzeug==3.0.4
+werkzeug==3.0.6
     # via
     #   flask
     #   flask-login
