--- a/requirements.txt
+++ b/requirements.txt
@@ -4,57 +4,39 @@
 #
 #    pip-compile
 #
-aniso8601==9.0.1
-    # via
-    #   flask-restx
-    #   flexget
-anyio==4.7.0
+aniso8601==10.0.0
+    # via flask-restx
+anyio==4.8.0
     # via httpx
 apscheduler==3.11.0
     # via flexget
-attrs==24.2.0
+attrs==25.1.0
     # via
-    #   flexget
     #   jsonschema
     #   referencing
 autocommand==2.2.2
-    # via
-    #   flexget
-    #   jaraco-text
-babelfish==0.6.0
-    # via
-    #   flexget
-    #   guessit
-beautifulsoup4==4.12.3
+    # via jaraco-text
+babelfish==0.6.1
+    # via guessit
+beautifulsoup4==4.13.3
     # via flexget
 blinker==1.9.0
-    # via
-    #   flask
-    #   flexget
+    # via flask
 brotli==1.1.0
+    # via flask-compress
+certifi==2025.1.31
     # via
-    #   flask-compress
-    #   flexget
-certifi==2024.8.30
-    # via
-    #   flexget
     #   httpcore
     #   httpx
     #   requests
-charset-normalizer==3.4.0
-    # via
-    #   flexget
-    #   requests
+charset-normalizer==3.4.1
+    # via requests
 cheroot==10.0.1
-    # via
-    #   cherrypy
-    #   flexget
+    # via cherrypy
 cherrypy==18.10.0
     # via flexget
-click==8.1.7
-    # via
-    #   flask
-    #   flexget
+click==8.1.8
+    # via flask
 cloudscraper==1.2.71
     # via -r requirements.in
 colorama==0.4.6
@@ -78,14 +60,12 @@ flask-login==0.6.3
     # via flexget
 flask-restx==1.3.0
     # via flexget
-flexget==3.12.1
+flexget==3.15.9
     # via -r requirements.in
 future==0.18.3
     # via irc-bot
 greenlet==3.1.1
-    # via
-    #   flexget
-    #   sqlalchemy
+    # via sqlalchemy
 guessit==3.8.0
     # via flexget
 h11==0.14.0
@@ -99,38 +79,26 @@ httpx==0.28.1
 idna==3.10
     # via
     #   anyio
-    #   flexget
     #   httpx
     #   requests
-importlib-resources==6.4.5
-    # via
-    #   flask-restx
-    #   flexget
+importlib-resources==6.5.2
+    # via flask-restx
 irc-bot==1.0.41
     # via -r requirements.in
 itsdangerous==2.2.0
-    # via
-    #   flask
-    #   flexget
+    # via flask
 jaraco-collections==5.1.0
-    # via
-    #   cherrypy
-    #   flexget
+    # via cherrypy
 jaraco-context==6.0.1
-    # via
-    #   flexget
-    #   jaraco-text
+    # via jaraco-text
 jaraco-functools==4.1.0
     # via
     #   cheroot
-    #   flexget
     #   jaraco-text
     #   tempora
 jaraco-text==4.0.0
-    # via
-    #   flexget
-    #   jaraco-collections
-jinja2==3.1.4
+    # via jaraco-collections
+jinja2==3.1.5
     # via
     #   flask
     #   flexget
@@ -139,29 +107,21 @@ jsonschema==4.23.0
     #   flask-restx
     #   flexget
 jsonschema-specifications==2024.10.1
-    # via
-    #   flexget
-    #   jsonschema
-loguru==0.7.2
+    # via jsonschema
+loguru==0.7.3
     # via flexget
 markdown-it-py==3.0.0
-    # via
-    #   flexget
-    #   rich
+    # via rich
 markupsafe==3.0.2
     # via
-    #   flexget
     #   jinja2
     #   werkzeug
 mdurl==0.1.2
-    # via
-    #   flexget
-    #   markdown-it-py
-more-itertools==10.5.0
+    # via markdown-it-py
+more-itertools==10.6.0
     # via
     #   cheroot
     #   cherrypy
-    #   flexget
     #   jaraco-functools
     #   jaraco-text
 packaging==24.2
@@ -169,22 +129,16 @@ packaging==24.2
 pendulum==3.0.0
     # via flexget
 plumbum==1.9.0
-    # via
-    #   flexget
-    #   rpyc
+    # via rpyc
 portend==3.2.0
-    # via
-    #   cherrypy
-    #   flexget
-psutil==6.1.0
+    # via cherrypy
+psutil==6.1.1
     # via flexget
-pygments==2.18.0
-    # via
-    #   flexget
-    #   rich
+pygments==2.19.1
+    # via rich
 pynzb==0.1.0
     # via flexget
-pyparsing==3.2.0
+pyparsing==3.2.1
     # via
     #   cloudscraper
     #   flexget
@@ -201,10 +155,8 @@ python-dateutil==2.9.0.post0
     #   time-machine
 python-telegram-bot==21.8
     # via -r requirements.in
-pytz==2024.2
-    # via
-    #   flask-restx
-    #   flexget
+pytz==2025.1
+    # via flask-restx
 pyyaml==6.0.2
     # via flexget
 rarfile==4.2
@@ -213,9 +165,8 @@ rebulk==3.2.0
     # via
     #   flexget
     #   guessit
-referencing==0.35.1
+referencing==0.36.2
     # via
-    #   flexget
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.3
@@ -228,35 +179,27 @@ requests-toolbelt==1.0.0
     # via cloudscraper
 rich==13.9.4
     # via flexget
-rpds-py==0.21.0
+rpds-py==0.22.3
     # via
-    #   flexget
     #   jsonschema
     #   referencing
 rpyc==6.0.1
     # via flexget
 sgmllib3k==1.0.0
+    # via feedparser
+six==1.17.0
     # via
-    #   feedparser
-    #   flexget
-six==1.16.0
-    # via
-    #   flexget
     #   html5lib
     #   irc-bot
     #   python-dateutil
 sniffio==1.3.1
     # via anyio
 soupsieve==2.6
-    # via
-    #   beautifulsoup4
-    #   flexget
-sqlalchemy==2.0.36
+    # via beautifulsoup4
+sqlalchemy==2.0.38
     # via flexget
-tempora==5.7.0
-    # via
-    #   flexget
-    #   portend
+tempora==5.8.0
+    # via portend
 time-machine==2.16.0
     # via pendulum
 transmission-rpc==7.0.11
@@ -264,25 +207,20 @@ transmission-rpc==7.0.11
 typing-extensions==4.12.2
     # via
     #   anyio
-    #   flexget
+    #   beautifulsoup4
+    #   referencing
     #   sqlalchemy
     #   transmission-rpc
-tzdata==2024.2
-    # via
-    #   flexget
-    #   pendulum
-tzlocal==5.2
-    # via
-    #   apscheduler
-    #   flexget
+tzdata==2025.1
+    # via pendulum
+tzlocal==5.3
+    # via apscheduler
 urllib3==1.26.20
     # via
     #   flexget
     #   requests
 webencodings==0.5.1
-    # via
-    #   flexget
-    #   html5lib
+    # via html5lib
 werkzeug==3.1.3
     # via
     #   flask
@@ -290,13 +228,9 @@ werkzeug==3.1.3
     #   flask-restx
     #   flexget
 zc-lockfile==3.0.post1
-    # via
-    #   cherrypy
-    #   flexget
+    # via cherrypy
 zstandard==0.23.0
-    # via
-    #   flask-compress
-    #   flexget
+    # via flask-compress
 zxcvbn==4.4.28
     # via flexget
 
