--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@
 #
 aniso8601==10.0.0
     # via flask-restx
-anyio==4.8.0
+anyio==4.9.0
     # via httpx
 apscheduler==3.11.0
     # via flexget
-attrs==25.1.0
+attrs==25.3.0
     # via
     #   jsonschema
     #   referencing
@@ -54,7 +54,7 @@ flask==3.1.0
     #   flexget
 flask-compress==1.17
     # via flexget
-flask-cors==5.0.0
+flask-cors==5.0.1
     # via flexget
 flask-login==0.6.3
     # via flexget
@@ -98,7 +98,7 @@ jaraco-functools==4.1.0
     #   tempora
 jaraco-text==4.0.0
     # via jaraco-collections
-jinja2==3.1.5
+jinja2==3.1.6
     # via
     #   flask
     #   flexget
@@ -138,7 +138,7 @@ pygments==2.19.1
     # via rich
 pynzb==0.1.0
     # via flexget
-pyparsing==3.2.1
+pyparsing==3.2.3
     # via
     #   cloudscraper
     #   flexget
@@ -155,7 +155,7 @@ python-dateutil==2.9.0.post0
     #   time-machine
 python-telegram-bot==21.8
     # via -r requirements.in
-pytz==2025.1
+pytz==2025.2
     # via flask-restx
 pyyaml==6.0.2
     # via flexget
@@ -179,7 +179,7 @@ requests-toolbelt==1.0.0
     # via cloudscraper
 rich==13.9.4
     # via flexget
-rpds-py==0.22.3
+rpds-py==0.24.0
     # via
     #   jsonschema
     #   referencing
@@ -196,7 +196,7 @@ sniffio==1.3.1
     # via anyio
 soupsieve==2.6
     # via beautifulsoup4
-sqlalchemy==2.0.38
+sqlalchemy==2.0.40
     # via flexget
 tempora==5.8.0
     # via portend
@@ -204,16 +204,16 @@ time-machine==2.16.0
     # via pendulum
 transmission-rpc==7.0.11
     # via -r requirements.in
-typing-extensions==4.12.2
+typing-extensions==4.13.1
     # via
     #   anyio
     #   beautifulsoup4
     #   referencing
     #   sqlalchemy
     #   transmission-rpc
-tzdata==2025.1
+tzdata==2025.2
     # via pendulum
-tzlocal==5.3
+tzlocal==5.3.1
     # via apscheduler
 urllib3==1.26.20
     # via
@@ -224,6 +224,7 @@ webencodings==0.5.1
 werkzeug==3.1.3
     # via
     #   flask
+    #   flask-cors
     #   flask-login
     #   flask-restx
     #   flexget
@@ -231,7 +232,7 @@ zc-lockfile==3.0.post1
     # via cherrypy
 zstandard==0.23.0
     # via flask-compress
-zxcvbn==4.4.28
+zxcvbn==4.5.0
     # via flexget
 
 # The following packages are considered to be unsafe in a requirements file:
